[metadata]
name = random-route-generator
version = 1.0.2
author = Oskar Kraemer
url = https://github.com/oskarkraemer/randomRouteGenerator
description = A Python libary to generate a random route with a specified length.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = geography, route, random, generator, gpx, gps
license = GPL-3.0
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir=
    =src
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    gpxpy >= 1.5.0
    overpy >= 0.6
    haversine >= 2.7.0

[options.packages.find]
where=src